# claude-boiler

./: LICENSE  README.md  TODO.md
.claude/: settings.json  statusline-command.sh
.claude/prompts/: review.md
.claude/skills/cppchef/: SKILL.md
.claude/skills/cppchef-lean/: SKILL.md
.claude/skills/cpplean/: SKILL.md
.claude/skills/grill-me/: LICENSE  SKILL.md
.claude/skills/pychef/: LICENSE  SKILL.md
.claude/skills/pychef-lean/: SKILL.md
.claude/skills/pylean/: SKILL.md
.claude/skills/ros2-build-doctor/: SKILL.md
.claude/skills/ros2-build-doctor/evals/: evals.json
.claude/skills/ros2-build-doctor/evals/files/: overlay_workspace_notes.md  stale_workspace_notes.md
.claude/skills/ros2-build-doctor/evals/files/build_speed_ws/: README.dev.md
.claude/skills/ros2-build-doctor/evals/files/build_speed_ws/src/mission_console/: package.xml
.claude/skills/ros2-build-doctor/evals/files/build_speed_ws/src/mission_msgs/: package.xml
.claude/skills/ros2-build-doctor/evals/files/build_speed_ws/src/path_server/: CMakeLists.txt  package.xml
.claude/skills/ros2-build-doctor/evals/files/build_speed_ws/src/path_server/src/: path_server.cpp
.claude/skills/ros2-build-doctor/evals/files/navigation_bridge_ws/src/navigation_bridge/: CMakeLists.txt  package.xml
.claude/skills/ros2-build-doctor/evals/files/navigation_bridge_ws/src/navigation_bridge/src/: navigation_bridge_node.cpp
.claude/skills/ros2-build-doctor/evals/files/overlay_ws/src/nav_client/: CMakeLists.txt  package.xml
.claude/skills/ros2-build-doctor/evals/files/overlay_ws/src/nav_client/src/: nav_client_node.cpp
.claude/skills/ros2-build-doctor/evals/files/stale_ws/install/planner_msgs/share/planner_msgs/: package.xml
.claude/skills/ros2-build-doctor/evals/files/stale_ws/src/route_msgs/: package.xml
.claude/skills/ros2-build-doctor/evals/files/teleop_tools_ws/src/teleop_tools/: package.xml  setup.cfg  setup.py
.claude/skills/ros2-build-doctor/evals/files/teleop_tools_ws/src/teleop_tools/resource/: teleop_tools
.claude/skills/ros2-build-doctor/evals/files/teleop_tools_ws/src/teleop_tools/teleop_tools/: __init__.py  keyboard.py
.claude/skills/sparing/: SKILL.md
best-practive/: coding-workflow.md  workflow.md
