<?xml version="1.0"?>
<package format="3">
  <name>navigation_bridge</name>
  <version>0.2.0</version>
  <description>Bridges planner outputs into ROS2 navigation topics.</description>
  <maintainer email="dev@example.com">Nav Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
