<?xml version="1.0"?>
<package format="3">
  <name>nav_client</name>
  <version>0.3.0</version>
  <description>Consumes custom navigation messages from the interfaces overlay.</description>
  <maintainer email="dev@example.com">Nav Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>my_robot_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
