<?xml version="1.0"?>
<package format="3">
  <name>route_msgs</name>
  <version>0.6.0</version>
  <description>Current route message package after planner_msgs rename.</description>
  <maintainer email="dev@example.com">Routing Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
